--- a/post.ipynb
+++ b/post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,36 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "valueList = [[\"\\\"testDir\\\"\", 1000, False, True]]\n",
-    "configFilePath = \"./conf/config.yaml\"\n",
-    "for values in valueList:\n",
-    "    with open(configFilePath, \"r\") as configFile:\n",
-    "        configList = configFile.readlines()\n",
-    "        for i, line in enumerate(configList):\n",
-    "            if \"network_dir\" in line and \"initialization\" not in line:\n",
-    "                configList[i]=\"network_dir: \" + str(values[0]) + \"\\n\"\n",
-    "            if \"max_steps\" in line:\n",
-    "                configList[i]=\"  max_steps: \" + str(values[1]) + \"\\n\"\n",
-    "            if \"useData\" in line:\n",
-    "                configList[i]=\"  useData: \" + str(values[2]) + \"\\n\"\n",
-    "            if \"usePhysics\" in line:\n",
-    "                configList[i]=\"  usePhysics: \" + str(values[3]) + \"\\n\"\n",
-    "        \n",
-    "    with open(configFilePath, \"w\") as configFile:\n",
-    "        configFile.writelines(configList)\n",
-    "        \n",
-    "    p = Process(target=ffs, args=())\n",
-    "    p.start()\n",
-    "    p.join() \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,20 +35,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DP 5\n",
+      "DP 5\n",
+      "DP 5\n",
+      "DP 5\n",
+      "DP 5\n",
+      "DP 36\n",
+      "DP 36\n",
+      "DP 36\n",
+      "DP 36\n",
+      "DP 36\n",
+      "DP 79\n",
+      "DP 79\n",
+      "DP 79\n",
+      "DP 79\n",
+      "DP 79\n",
+      "DP 86\n",
+      "DP 86\n",
+      "DP 86\n",
+      "DP 86\n",
+      "DP 86\n",
+      "DP 154\n",
+      "ns DP 154\n",
+      "DP 154\n",
+      "ns DP 154\n",
+      "DP 154\n",
+      "ns DP 154\n",
+      "DP 154\n",
+      "ns DP 154\n",
+      "DP 154\n",
+      "ns DP 154\n",
+      "DP 155\n",
+      "ns DP 155\n",
+      "DP 155\n",
+      "ns DP 155\n",
+      "DP 155\n",
+      "ns DP 155\n",
+      "DP 155\n",
+      "ns DP 155\n",
+      "DP 155\n",
+      "ns DP 155\n",
+      "DP 156\n",
+      "ns DP 156\n",
+      "DP 156\n",
+      "ns DP 156\n",
+      "DP 156\n",
+      "ns DP 156\n",
+      "DP 156\n",
+      "ns DP 156\n",
+      "DP 156\n",
+      "ns DP 156\n",
+      "DP 157\n",
+      "ns DP 157\n",
+      "DP 157\n",
+      "ns DP 157\n",
+      "DP 157\n",
+      "ns DP 157\n",
+      "DP 157\n",
+      "ns DP 157\n",
+      "DP 157\n",
+      "ns DP 157\n",
+      "DP 158\n",
+      "ns DP 158\n",
+      "DP 158\n",
+      "ns DP 158\n",
+      "DP 158\n",
+      "ns DP 158\n",
+      "DP 158\n",
+      "ns DP 158\n",
+      "DP 158\n",
+      "ns DP 158\n",
+      "DP 159\n",
+      "ns DP 159\n",
+      "DP 159\n",
+      "ns DP 159\n",
+      "DP 159\n",
+      "ns DP 159\n",
+      "DP 159\n",
+      "ns DP 159\n",
+      "DP 159\n",
+      "ns DP 159\n",
+      "DP 160\n",
+      "ns DP 160\n",
+      "DP 160\n",
+      "ns DP 160\n",
+      "DP 160\n",
+      "ns DP 160\n",
+      "DP 160\n",
+      "ns DP 160\n",
+      "DP 160\n",
+      "ns DP 160\n",
+      "DP 161\n",
+      "ns DP 161\n",
+      "DP 161\n",
+      "ns DP 161\n",
+      "DP 161\n",
+      "ns DP 161\n",
+      "DP 161\n",
+      "ns DP 161\n",
+      "DP 161\n",
+      "ns DP 161\n",
+      "DP 162\n",
+      "ns DP 162\n",
+      "DP 162\n",
+      "ns DP 162\n",
+      "DP 162\n",
+      "ns DP 162\n",
+      "DP 162\n",
+      "ns DP 162\n",
+      "DP 162\n",
+      "ns DP 162\n",
+      "DP 163\n",
+      "ns DP 163\n",
+      "DP 163\n",
+      "ns DP 163\n",
+      "DP 163\n",
+      "ns DP 163\n",
+      "DP 163\n",
+      "ns DP 163\n",
+      "DP 163\n",
+      "ns DP 163\n",
+      "DP 164\n",
+      "ns DP 164\n",
+      "DP 164\n",
+      "ns DP 164\n",
+      "DP 164\n",
+      "ns DP 164\n",
+      "DP 164\n",
+      "ns DP 164\n",
+      "DP 164\n",
+      "ns DP 164\n",
+      "DP 165\n",
+      "ns DP 165\n",
+      "DP 165\n",
+      "ns DP 165\n",
+      "DP 165\n",
+      "ns DP 165\n",
+      "DP 165\n",
+      "ns DP 165\n",
+      "DP 165\n",
+      "ns DP 165\n",
+      "DP 166\n",
+      "ns DP 166\n",
+      "DP 166\n",
+      "ns DP 166\n",
+      "DP 166\n",
+      "ns DP 166\n",
+      "DP 166\n",
+      "ns DP 166\n",
+      "DP 166\n",
+      "ns DP 166\n",
+      "DP 167\n",
+      "ns DP 167\n",
+      "DP 167\n",
+      "ns DP 167\n",
+      "DP 167\n",
+      "ns DP 167\n",
+      "DP 167\n",
+      "ns DP 167\n",
+      "DP 167\n",
+      "ns DP 167\n",
+      "DP 168\n",
+      "ns DP 168\n",
+      "DP 168\n",
+      "ns DP 168\n",
+      "DP 168\n",
+      "ns DP 168\n",
+      "DP 168\n",
+      "ns DP 168\n",
+      "DP 168\n",
+      "ns DP 168\n",
+      "DP 169\n",
+      "ns DP 169\n",
+      "DP 169\n",
+      "ns DP 169\n",
+      "DP 169\n",
+      "ns DP 169\n",
+      "DP 169\n",
+      "ns DP 169\n",
+      "DP 169\n",
+      "ns DP 169\n",
+      "DP 170\n",
+      "ns DP 170\n",
+      "DP 170\n",
+      "ns DP 170\n",
+      "DP 170\n",
+      "ns DP 170\n",
+      "DP 170\n",
+      "ns DP 170\n",
+      "DP 170\n",
+      "ns DP 170\n",
+      "DP 171\n",
+      "ns DP 171\n",
+      "DP 171\n",
+      "ns DP 171\n",
+      "DP 171\n",
+      "ns DP 171\n",
+      "DP 171\n",
+      "ns DP 171\n",
+      "DP 171\n",
+      "ns DP 171\n",
+      "DP 172\n",
+      "ns DP 172\n",
+      "DP 172\n",
+      "ns DP 172\n",
+      "DP 172\n",
+      "ns DP 172\n",
+      "DP 172\n",
+      "ns DP 172\n",
+      "DP 172\n",
+      "ns DP 172\n",
+      "DP 173\n",
+      "ns DP 173\n",
+      "DP 173\n",
+      "ns DP 173\n",
+      "DP 173\n",
+      "ns DP 173\n",
+      "DP 173\n",
+      "ns DP 173\n",
+      "DP 173\n",
+      "ns DP 173\n"
+     ]
+    }
+   ],
    "source": [
     "ansysFilePath=\"./ansysDPsValidation.csv\"\n",
     "resultsFilePath=\"./results.csv\"\n",
     "outputsPath=\"./outputs/fwdFacingStep\"\n",
     "\n",
-    "models = [\"dataPlusPhysics3600@500k\", \"physicsOnly@500k\"]\n",
+    "models = [\"old_dataPlusPhysics3600@300k\", \"data3600PlusPhysicsLambda05@300k\", \"data3600PlusPhysicsLambda1@300k\", \"old_physicsOnly@500k\", \"physicsOnly@500k\"]\n",
+    "\n",
+    "diffSumSkip = [\"DP 5\",\"DP 36\",\"DP 79\",\"DP 86\"]\n",
     "\n",
     "\n",
     "with open(ansysFilePath, \"r\") as ansysFile,  open(resultsFilePath, \"w\") as resultsFile:\n",
     "        reader = csv.reader(ansysFile, delimiter=\",\")\n",
     "        writer = csv.writer(resultsFile, delimiter=\",\")\n",
+    "        diffDict= {}\n",
+    "        for model in models:\n",
+    "                diffDict[model] = 0\n",
+    "                # print(type(diffDict[model]))\n",
     "        for i, row in enumerate(reader):\n",
     "                if i == 0:\n",
     "                        # add columns for difference modulus vs ansys\n",
@@ -111,10 +315,20 @@
     "                                diffDeltaCp=100*(deltaCp-float(row[4]))/float(row[4])\n",
     "                                # diffDeltaCptot=100*(deltaCptot-float(row[6]))/float(row[6])\n",
     "                                \n",
+    "                                print(row[0])\n",
+    "                                if row[0] not in diffSumSkip:\n",
+    "                                        print(\"ns\", row[0])\n",
+    "                                        diffDict[model] += abs(diffDeltaCp)\n",
+    "                                \n",
     "                                # add modulus results to table\n",
     "                                modRow=[row[0] + \" \" + model] + row[1:4] + [deltaCp] + [diffDeltaCp] + [DSP] + [USP]\n",
     "                                # modRow=[row[0] + \" \" + model] + row[1:4] + [deltaCp] + [diffDeltaCp] + [deltaCptot] + [diffDeltaCptot] + [DSP] + [DSPtot] + [USP] + [USPtot]\n",
     "                                writer.writerow(modRow)\n",
+    "        # Add deviation sum\n",
+    "        for model in models:\n",
+    "                deviationRow = [\"Sum \" + model] + [\"-\"] + [\"-\"] + [\"-\"] + [\"-\"] + [diffDict[model]] + [\"-\"] + [\"-\"]\n",
+    "                writer.writerow(deviationRow)\n",
+    "                \n",
     "                                \n",
     "                                \n"
    ]
@@ -160,285 +374,6 @@
     "    popX = np.load(\"popX\" + str(re) + \".npy\") \n",
     "    # print(\"Re \" + str(re) + \" F: \", F)\n",
     "    print(\"Re \" + str(re) + \" X: \", X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.9890366])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.45077624, 0.30282468])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684],\n",
-       "       [4.4068684]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "popF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.45077624, 0.30282468],\n",
-       "       [0.45077624, 0.30282467],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282455],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.3028245 ],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282455],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.3028245 ],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282455],\n",
-       "       [0.45077624, 0.30282455],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.3028245 ],\n",
-       "       [0.45077624, 0.30282449],\n",
-       "       [0.45077624, 0.3028245 ],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282455],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282455],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077624, 0.30282455],\n",
-       "       [0.45077624, 0.30282454],\n",
-       "       [0.45077572, 0.3028242 ],\n",
-       "       [0.45077624, 0.30282471],\n",
-       "       [0.45077624, 0.30282471],\n",
-       "       [0.45077624, 0.30282471],\n",
-       "       [0.45077624, 0.30282471],\n",
-       "       [0.45077624, 0.30282471],\n",
-       "       [0.45077624, 0.30282471],\n",
-       "       [0.45077624, 0.3028247 ],\n",
-       "       [0.45077624, 0.30282471],\n",
-       "       [0.45077623, 0.30282471],\n",
-       "       [0.45077623, 0.3028248 ],\n",
-       "       [0.45077623, 0.30282471],\n",
-       "       [0.45077623, 0.30282471],\n",
-       "       [0.4507759 , 0.30282471],\n",
-       "       [0.45077653, 0.30282438],\n",
-       "       [0.45077652, 0.30282438],\n",
-       "       [0.45077653, 0.30282438],\n",
-       "       [0.45077653, 0.30282438],\n",
-       "       [0.45077653, 0.30282438],\n",
-       "       [0.45077652, 0.30282438],\n",
-       "       [0.45077647, 0.30282438],\n",
-       "       [0.45077725, 0.30282426],\n",
-       "       [0.45077725, 0.30282426],\n",
-       "       [0.45077624, 0.30282325],\n",
-       "       [0.45077718, 0.30282312],\n",
-       "       [0.45077718, 0.30282312],\n",
-       "       [0.45077624, 0.30282525],\n",
-       "       [0.45077624, 0.30282525],\n",
-       "       [0.45077624, 0.30282523],\n",
-       "       [0.45077623, 0.30282453],\n",
-       "       [0.45077624, 0.30282331],\n",
-       "       [0.45077624, 0.3028233 ],\n",
-       "       [0.45077624, 0.30282332],\n",
-       "       [0.45077624, 0.30282332],\n",
-       "       [0.45077624, 0.30282329],\n",
-       "       [0.45077624, 0.30282329],\n",
-       "       [0.45077624, 0.30282332],\n",
-       "       [0.45077624, 0.30282354],\n",
-       "       [0.45077624, 0.30282329],\n",
-       "       [0.45077624, 0.30282329],\n",
-       "       [0.45077624, 0.30282332],\n",
-       "       [0.45077626, 0.30282332],\n",
-       "       [0.45077624, 0.30282332],\n",
-       "       [0.45077624, 0.30282329],\n",
-       "       [0.45077624, 0.30282327],\n",
-       "       [0.45077619, 0.30282331],\n",
-       "       [0.4507761 , 0.30282424],\n",
-       "       [0.45077655, 0.30282474],\n",
-       "       [0.45077655, 0.30282472],\n",
-       "       [0.45077718, 0.3028247 ],\n",
-       "       [0.45077663, 0.30282193],\n",
-       "       [0.45077507, 0.30282423],\n",
-       "       [0.45077507, 0.30282423],\n",
-       "       [0.45077653, 0.30282454],\n",
-       "       [0.45077653, 0.30282455],\n",
-       "       [0.45077653, 0.30282453],\n",
-       "       [0.45077653, 0.30282455],\n",
-       "       [0.45077647, 0.30282453],\n",
-       "       [0.45077653, 0.30282454],\n",
-       "       [0.45077653, 0.30282455],\n",
-       "       [0.45077653, 0.30282453],\n",
-       "       [0.45077624, 0.30282618],\n",
-       "       [0.45077624, 0.30282618],\n",
-       "       [0.45077624, 0.30282617],\n",
-       "       [0.45077571, 0.30282454],\n",
-       "       [0.45077571, 0.30282454],\n",
-       "       [0.45077622, 0.30282438],\n",
-       "       [0.45077618, 0.30282439]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "popX"
    ]
   }
  ],
