--- a/post.ipynb
+++ b/post.ipynb
@@ -335,45 +335,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Re 100 X:  [0.70045392 0.32997775]\n",
-      "Re 200 X:  [0.45144677 0.30338055]\n",
-      "Re 300 X:  [0.44996036 0.30353034]\n",
-      "Re 400 X:  [0.20000089 0.32999946]\n",
-      "Re 500 X:  [0.45093736 0.30275938]\n",
-      "Re 600 X:  [0.45125546 0.30468607]\n",
-      "Re 700 X:  [0.2000014  0.32999907]\n",
-      "Re 800 X:  [0.69735089 0.32999746]\n",
-      "Re 900 X:  [0.69835677 0.32999852]\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'optResultsF1000.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[42], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m re \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m1100\u001b[39m, \u001b[38;5;241m100\u001b[39m):\n\u001b[0;32m----> 2\u001b[0m     F \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43moptResultsF\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mre\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m.npy\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m     X \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moptResultsX\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(re) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m     popF \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpopF\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(re) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    404\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 405\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    406\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    408\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'optResultsF1000.npy'"
+      "Re 100: Lo = 0.7004539247879265  Ho = 0.32997774539397423\n",
+      "Re 200: Lo = 0.45144677187497656  Ho = 0.3033805493996216\n",
+      "Re 300: Lo = 0.44996036073704837  Ho = 0.3035303441271354\n",
+      "Re 400: Lo = 0.20000088964378746  Ho = 0.3299994645946832\n",
+      "Re 500: Lo = 0.45093735802183094  Ho = 0.3027593771635538\n",
+      "Re 600: Lo = 0.4512554564515524  Ho = 0.304686072700687\n"
      ]
     }
    ],
    "source": [
-    "for re in range(100,1100, 100):\n",
-    "    F = np.load(\"optResultsF\" + str(re) + \".npy\")\n",
-    "    X = np.load(\"optResultsX\" + str(re) + \".npy\")\n",
-    "    popF = np.load(\"popF\" + str(re) + \".npy\")\n",
-    "    popX = np.load(\"popX\" + str(re) + \".npy\") \n",
+    "import numpy as np\n",
+    "dir=\"./\"\n",
+    "for re in range(100,700, 100):\n",
+    "    F = np.load(dir + \"optResultsF\" + str(re) + \".npy\")\n",
+    "    X = np.load(dir + \"optResultsX\" + str(re) + \".npy\")\n",
+    "    popF = np.load(dir + \"popF\" + str(re) + \".npy\")\n",
+    "    popX = np.load(dir + \"popX\" + str(re) + \".npy\") \n",
     "    # print(\"Re \" + str(re) + \" F: \", F)\n",
-    "    print(\"Re \" + str(re) + \" X: \", X)"
+    "    print(\"Re \" + str(re) + \": Lo = \" + str(X[0]), \" Ho = \" + str(X[1]))"
    ]
   },
   {
