--- a/post.ipynb
+++ b/post.ipynb
@@ -335,32 +335,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Re 100: Lo = 0.7004539247879265  Ho = 0.32997774539397423\n",
-      "Re 200: Lo = 0.45144677187497656  Ho = 0.3033805493996216\n",
-      "Re 300: Lo = 0.44996036073704837  Ho = 0.3035303441271354\n",
-      "Re 400: Lo = 0.20000088964378746  Ho = 0.3299994645946832\n",
-      "Re 500: Lo = 0.45093735802183094  Ho = 0.3027593771635538\n",
-      "Re 600: Lo = 0.4512554564515524  Ho = 0.304686072700687\n"
+      "Re 100: Lo = 0.4992036946570908  Ho = 0.24759940927043964\n",
+      "Re 200: Lo = 0.468799680085605  Ho = 0.24206058221868754\n",
+      "Re 300: Lo = 0.2752192130293616  Ho = 0.4505409573457049\n",
+      "Re 400: Lo = 0.46647198199767737  Ho = 0.3259645207367429\n",
+      "Re 500: Lo = 0.4641116490118472  Ho = 0.3665257016338343\n",
+      "Re 600: Lo = 0.46402240598051586  Ho = 0.35676000416032794\n",
+      "Re 700: Lo = 0.46063345712358583  Ho = 0.3618633578374334\n",
+      "Re 800: Lo = 0.9099537192701446  Ho = 0.3033702229836598\n",
+      "Re 900: Lo = 0.9074608811736081  Ho = 0.3055324061737196\n",
+      "Re 1000: Lo = 0.8306751812605733  Ho = 0.3183161637435419\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "dir=\"./\"\n",
-    "for re in range(100,700, 100):\n",
-    "    F = np.load(dir + \"optResultsF\" + str(re) + \".npy\")\n",
-    "    X = np.load(dir + \"optResultsX\" + str(re) + \".npy\")\n",
-    "    popF = np.load(dir + \"popF\" + str(re) + \".npy\")\n",
-    "    popX = np.load(dir + \"popX\" + str(re) + \".npy\") \n",
-    "    # print(\"Re \" + str(re) + \" F: \", F)\n",
-    "    print(\"Re \" + str(re) + \": Lo = \" + str(X[0]), \" Ho = \" + str(X[1]))"
+    "\n",
+    "dirSkip = [\".hydra\", \"init\"]\n",
+    "\n",
+    "optResultsPath = \"./optimizationResults/\"\n",
+    "\n",
+    "models = [\"physicsOnly@500k\"]\n",
+    "# models = listdir(outputsPath)\n",
+    "models.sort()\n",
+    "\n",
+    "for model in models:\n",
+    "    if model in dirSkip:\n",
+    "        print(\"skipping \", model)\n",
+    "        continue\n",
+    "        \n",
+    "    optPath = optResultsPath + model\n",
+    "    for reNr in range (100, 1100, 100):\n",
+    "\n",
+    "        F = np.load(optPath + \"/optResultsF\" + str(reNr) + \".npy\")\n",
+    "        X = np.load(optPath + \"/optResultsX\" + str(reNr) + \".npy\")\n",
+    "        popF = np.load(optPath + \"/popF\" + str(reNr) + \".npy\")\n",
+    "        popX = np.load(optPath + \"/popX\" + str(reNr) + \".npy\") \n",
+    "        # print(\"Re \" + str(re) + \" F: \", F)\n",
+    "        print(\"Re \" + str(reNr) + \": Lo = \" + str(X[0]), \" Ho = \" + str(X[1]))"
    ]
   },
   {
